--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -31,6 +31,7 @@ runs:
     #     virtualenvs-create: true
     #     virtualenvs-in-project: true
     - name: Install poetry
+      shell: bash
       run: |
         pipx install poetry
         which poetry
