--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -45,7 +45,7 @@ runs:
       shell: bash
       run: |
         which poetry
-        poetry env use ${{ inputs.python-version }}
+        poetry env use "python${{ inputs.python-version }}"
         poetry config virtualenvs.create true
         poetry config virtualenvs.in-project true
     # - name: Load cached venv
@@ -61,6 +61,7 @@ runs:
       shell: bash
       run: |
         poetry install --no-interaction --no-root ${{ inputs.poetry-dependency-install-flags }}
+        poetry run python --version
     # Now run same command but let the package install too
     - name: Install package
       if: ${{ inputs.run-poetry-install == 'true' }}
