--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -24,12 +24,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-    # - name: Install Poetry
-    #   if: steps.cached-poetry.outputs.cache-hit != 'true'
-    #   uses: snok/install-poetry@v1
-    #   with:
-    #     virtualenvs-create: true
-    #     virtualenvs-in-project: true
     - name: Install poetry
       shell: bash
       run: |
@@ -44,20 +38,9 @@ runs:
     - name: Set Poetry environment
       shell: bash
       run: |
-        which poetry
-        which python
-        which "python${{ inputs.python-version }}" || which Python || which "Python${{ inputs.python-version }}"
-        poetry env use "python${{ inputs.python-version }}"
+        # poetry env use "python${{ inputs.python-version }}"
         poetry config virtualenvs.create true
         poetry config virtualenvs.in-project true
-    # - name: Load cached venv
-    #   if: ${{ inputs.run-poetry-install == 'true' }}
-    #   id: cached-poetry-dependencies
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: ~/.cache
-    #     key: "venv-${{ inputs.venv-id }}-${{ inputs.os }}-${{ inputs.python-version }}-${{ hashFiles('**/poetry.lock') }}"
-    # Install dependencies first so that our package doesn't appear in the cache by accident
     - name: Install dependencies
       if: ${{ inputs.run-poetry-install == 'true' }}
       shell: bash
