--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -31,6 +31,7 @@ runs:
         which poetry
         poetry --version  # Check poetry installation
     - name: Set up Python ${{ inputs.python-version }}
+      id: setup-python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
@@ -38,18 +39,23 @@ runs:
     - name: Set Poetry environment
       shell: bash
       run: |
+        # This line used to be needed, but seems to have been
+        # sorted with newer poetry versions. The check is whether
+        # the right version of python is shown below after running
+        # `poetry run which python` and whether the right version
+        # of python is used in the tests
         # poetry env use "python${{ inputs.python-version }}"
         poetry config virtualenvs.create true
         poetry config virtualenvs.in-project true
     - name: Install dependencies
-      if: ${{ inputs.run-poetry-install == 'true' }}
+      if: ${{ inputs.run-poetry-install == 'true' }} && ${{ steps.setup-python.outputs.cache-hit != 'true' }}
       shell: bash
       run: |
         poetry install --no-interaction --no-root ${{ inputs.poetry-dependency-install-flags }}
-        poetry run python --version
     # Now run same command but let the package install too
     - name: Install package
       if: ${{ inputs.run-poetry-install == 'true' }}
       shell: bash
       run: |
         poetry install --no-interaction ${{ inputs.poetry-dependency-install-flags }}
+        poetry run python --version  # Check python version just in case
