--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,7 +17,7 @@ build:
       - pip install poetry
       - poetry config virtualenvs.create false
       - mkdir -p bin/magicc/magicc-v7.5.3
-      - wget -O "bin/magicc/magicc-v7.5.3.tar.gz" ${MAGICC_LINK_FROM_MAGICC_DOT_ORG}
+      - wget -O "bin/magicc/magicc-v7.5.3.tar.gz" "https://www.magicc.org/api/download?type=MAGICC7&token=${MAGICC_LINK_FROM_MAGICC_DOT_ORG}"
       - tar -xf bin/magicc/magicc-v7.5.3.tar.gz -C bin/magicc/magicc-v7.5.3
     post_install:
       - poetry install --with docs --all-extras
