--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,9 +88,13 @@ pre-commit = "^3.3.1"
 towncrier = "^23.6.0"
 liccheck = "^0.9.1"
 
+[tool.poetry-dynamic-versioning]
+enable = true
+dirty = true
+
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.coverage.run]
 source = ["src"]
