--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
     tags: ['v*']
 
 jobs:
-  mypy:
+  "mypy (expected failure)":
     if: ${{ !github.event.pull_request.draft }}
     runs-on: ubuntu-latest
     continue-on-error: true  # For now, don't worry about passing mypy because of legacy
@@ -21,7 +21,7 @@ jobs:
           venv-id: "docs"
           poetry-dependency-install-flags: "--all-extras --only 'main,dev'"
       - name: mypy
-        run: MYPYPATH=stubs poetry run mypy src
+        run: MYPYPATH=stubs poetry run mypy src || echo "mypy failed, as expected" && exit 0
 
   docs:
     if: ${{ !github.event.pull_request.draft }}
