Fix up workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
     tags: ['v*']
 
 jobs:
-  "mypy (expected failure)":
+  mypy_expected_failure:
     if: ${{ !github.event.pull_request.draft }}
     runs-on: ubuntu-latest
     continue-on-error: true  # For now, don't worry about passing mypy because of legacy
