Updating ciceroscmpy version and tests this also gets rid of pandas <2 requirement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,12 +48,12 @@ python-dotenv = "^1.0.0"
 scmdata = ">=0.7.4"
 tqdm = "^4.66.1"
 # optional below here
-ciceroscm = { version = "1.0.0", optional = true }  # TODO: ask Marit if she wants to loosen this
+ciceroscm = { version = "1.1.1", optional = true }  # TODO: ask Marit if she wants to loosen this
 fair = { version = "<2", optional = true }
 pymagicc = { version = "<3", optional = true }
 # Bit hacky, but basically we only need to pin pandas
 # if we're installing ciceroscm
-pandas = { version = "<2", optional = true }
+pandas = { version = "*", optional = true }
 notebook = { version = "*", optional = true }
 seaborn = { version = "^0.13.1", optional = true }
 ipywidgets = { version = "^8.1.1", optional = true }
