--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,20 +51,16 @@ tqdm = "^4.66.1"
 ciceroscm = { version = "1.1.1", optional = true }
 fair = { version = "<2", optional = true }
 pymagicc = { version = "<3", optional = true }
-# Bit hacky, but basically we only need to pin pandas
-# if we're installing ciceroscm
-pandas = { version = "*", optional = true }
 notebook = { version = "*", optional = true }
 seaborn = { version = "^0.13.1", optional = true }
 ipywidgets = { version = "^8.1.1", optional = true }
 
 [tool.poetry.extras]
 notebooks = ["notebook", "seaborn", "ipywidgets"]
-ciceroscm = ["pandas"]
-ciceroscmpy = ["pandas", "ciceroscm"]
+ciceroscmpy = ["ciceroscm"]
 fair = ["fair"]
 magicc = ["pymagicc"]
-models = ["pandas", "ciceroscm", "fair", "pymagicc"]
+models = ["ciceroscm", "fair", "pymagicc"]
 
 [tool.poetry.group.tests.dependencies]
 pytest = "^7.3.1"
