--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ pytest-regressions = "^2.5.0"
 
 [tool.poetry.group.docs.dependencies]
 myst-nb = "^0.17.0"
-sphinx-rtd-theme = "^1.2.0"
+sphinx-book-theme = "^1.1.0"
 sphinx-autodoc-typehints = "^1.23.0"
 sphinx-autodocgen = "^1.3"
 jupytext = "^1.14.5"
